# gql_fdw

./: Cargo.toml  graphql_fdw.control
src/: lib.rs
